# brioche-runtime-utils

./: Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/brioche-autopack/: Cargo.toml
crates/brioche-autopack/src/: lib.rs
crates/brioche-autopack/tests/: e2e.rs
crates/brioche-autowrap/: Cargo.toml
crates/brioche-autowrap/src/: lib.rs
crates/brioche-cc/: Cargo.toml
crates/brioche-cc/src/: main.rs
crates/brioche-cc/tests/: e2e.rs
crates/brioche-ld/: Cargo.toml
crates/brioche-ld/src/: main.rs
crates/brioche-ld/tests/: e2e.rs
crates/brioche-packed-plain-exec/: Cargo.toml
crates/brioche-packed-plain-exec/src/: main.rs
crates/brioche-packed-plain-exec/tests/: e2e.rs
crates/brioche-packed-userland-exec/: Cargo.toml
crates/brioche-packed-userland-exec/src/: linux.rs  main.rs
crates/brioche-packed-userland-exec/tests/: e2e.rs
crates/brioche-packer/: Cargo.toml
crates/brioche-packer/src/: autopack_template.rs  autowrap.rs  autowrap_template.rs  main.rs  pack_runnable_template.rs  resources.rs
crates/brioche-packer/src/autowrap/: template.rs
crates/brioche-packer/tests/: e2e.rs
crates/brioche-resources/: Cargo.toml
crates/brioche-resources/src/: lib.rs
crates/brioche-strip/: Cargo.toml
crates/brioche-strip/src/: main.rs
crates/brioche-strip/tests/: e2e.rs
crates/runnable/: Cargo.toml
crates/runnable-core/: Cargo.toml
crates/runnable-core/src/: encoding.rs  lib.rs
crates/runnable/src/: main.rs
crates/start-runnable/: Cargo.toml
crates/start-runnable/src/: main.rs
