[workspace.package]
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/brioche-autopack",
    "crates/brioche-cc",
    "crates/brioche-ld",
    "crates/brioche-packed-plain-exec",
    "crates/brioche-packed-userland-exec",
    "crates/brioche-packer",
    "crates/brioche-resources",
    "crates/brioche-strip",
    "crates/runnable-core",
]

[workspace.dependencies]
brioche-pack = { git = "https://github.com/brioche-dev/brioche.git", default-features = false }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }

[profile.release-tiny]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
