[workspace.package]
edition = "2024"
rust-version = "1.89" # To align with the rust-toolchain.toml

[workspace]
members = [
    "crates/brioche-autopack",
    "crates/brioche-cc",
    "crates/brioche-ld",
    "crates/brioche-packed-plain-exec",
    "crates/brioche-packed-userland-exec",
    "crates/brioche-packer",
    "crates/brioche-resources",
    "crates/brioche-strip",
    "crates/runnable-core",
]
resolver = "3"

[workspace.dependencies]
brioche-pack = { git = "https://github.com/brioche-dev/brioche.git", default-features = false }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive_complexity = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"

[profile.release-tiny]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
