[package]
name = "brioche-autopack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
bstr = "1.9.1"
eyre = "0.6.12"
globset = "0.4.16"
goblin = "0.9.3"
pathdiff = "0.2.3"
runnable-core = { path = "../runnable-core" }
serde_json = "1.0.140"
thiserror = "2.0.11"
walkdir = "2.5.0"

[lints]
workspace = true
