[package]
name = "brioche-autopack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
bstr = "1.12.1"
eyre = "0.6.12"
globset = "0.4.18"
goblin = "0.10.4"
pathdiff = "0.2.3"
runnable-core = { path = "../runnable-core" }
serde_json = "1.0.149"
thiserror = "2.0.17"
walkdir = "2.5.0"

[lints]
workspace = true
