[package]
name = "brioche-autopack"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
eyre = "0.6.12"
globset = "0.4.18"
goblin = "0.10.7"
pathdiff = "0.2.3"
runnable-core = { path = "../runnable-core" }
serde_json = "1.0.150"
thiserror = "2.0.18"
walkdir = "2.5.0"

[dev-dependencies]
libloading = "0.9"
tempfile = "3.27.0"

[lints]
workspace = true
