[package]
name = "brioche-ld"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-autopack = { path = "../brioche-autopack" }
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
bstr = "1.8.0"
chumsky = "0.10.1"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.28"
thiserror = "2.0.16"

[lints]
workspace = true
