[package]
name = "brioche-ld"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-autopack = { path = "../brioche-autopack" }
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
bstr = "1.12.1"
chumsky = "0.12.0"
eyre = "0.6.12"
thiserror = "2.0.18"

[lints]
workspace = true
