[package]
name = "brioche-ld"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-autopack = { path = "../brioche-autopack" }
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
chumsky = "0.13.0"
eyre = "0.6.12"
thiserror = "2.0.18"

[dev-dependencies]
goblin = "0.10.5"
tempfile = "3.27.0"

[lints]
workspace = true
