[package]
name = "brioche-packed-plain-exec"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
bstr = "1.12.1"
libc = "0.2.178"
runnable-core = { path = "../runnable-core" }
serde_json = "1.0.148"
thiserror = "2.0.17"

[lints]
workspace = true
