[package]
name = "brioche-packed-plain-exec"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
libc = "0.2.186"
runnable-core = { path = "../runnable-core" }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
brioche-autopack = { path = "../brioche-autopack" }
tempfile = "3.27.0"

[lints]
workspace = true
