[package]
name = "brioche-packed-userland-exec"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
cfg-if = "1.0.4"
libc = "0.2.180"
thiserror = "2.0.18"

[target.'cfg(target_os = "linux")'.dependencies]
userland-execve = "0.2.0"

[lints]
workspace = true
