[package]
name = "brioche-resources"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
blake3 = "1.8.3"
bstr = "1.12.1"
copy_dir = "0.1.3"
pathdiff = "0.2.3"
thiserror = "2.0.18"
tick-encoding = "0.1.3"
ulid = "1.2.1"
walkdir = "2.5.0"

[lints]
workspace = true
