[package]
name = "brioche-strip"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-autopack = { path = "../brioche-autopack" }
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
bstr = "1.8.0"
eyre = "0.6.12"
tempfile = "3.23.0"
thiserror = "2.0.17"
ulid = "1.2.1"

[lints]
workspace = true
