[package]
name = "brioche-strip"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-autopack = { path = "../brioche-autopack" }
brioche-pack = { workspace = true }
brioche-resources = { path = "../brioche-resources" }
eyre = "0.6.12"
tempfile = "3.24.0"
thiserror = "2.0.18"
ulid = "1.2.1"

[lints]
workspace = true
