[package]
name = "runnable-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bincode = "2.0.0-rc.3"
brioche-resources = { path = "../brioche-resources" }
bstr = "1.9.1"
schemars = "1.0.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = { version = "3.14.0", features = ["schemars_1"] }
thiserror = "2.0.16"
tick-encoding = "0.1.3"

[lints]
workspace = true
