[package]
name = "runnable-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
brioche-resources = { path = "../brioche-resources" }
bstr = "1.12.1"
schemars = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1", features = ["schemars_1"] }
thiserror = "2.0.17"
tick-encoding = "0.1.3"

[lints]
workspace = true
